tweak: updating huggingface dataset card template

--- a/notebooks/test_hf_push_meta.ipynb
+++ b/notebooks/test_hf_push_meta.ipynb
@@ -31,132 +31,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from unibox.utils.df_utils import column_memory_usage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Column</th>\n",
-       "      <th>Memory Usage</th>\n",
-       "      <th>Readable Memory Usage</th>\n",
-       "      <th>Dtype</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>name</td>\n",
-       "      <td>64890</td>\n",
-       "      <td>63.37 KB</td>\n",
-       "      <td>object</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>age</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7.81 KB</td>\n",
-       "      <td>int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>height</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7.81 KB</td>\n",
-       "      <td>int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>weight</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7.81 KB</td>\n",
-       "      <td>int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>date</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7.81 KB</td>\n",
-       "      <td>datetime64[ns]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>is_student</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000.00 B</td>\n",
-       "      <td>bool</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Column  Memory Usage Readable Memory Usage           Dtype\n",
-       "0        name         64890              63.37 KB          object\n",
-       "1         age          8000               7.81 KB           int64\n",
-       "2      height          8000               7.81 KB           int64\n",
-       "3      weight          8000               7.81 KB           int64\n",
-       "4        date          8000               7.81 KB  datetime64[ns]\n",
-       "5  is_student          1000             1000.00 B            bool"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame({\"name\": [f\"Name_{i}\" for i in range(1000)],\n",
-    "                   \"age\": [random.randint(18, 80) for _ in range(1000)],\n",
-    "                   \"height\": [random.randint(150, 200) for _ in range(1000)],\n",
-    "                   \"weight\": [random.randint(50, 150) for _ in range(1000)],\n",
-    "                   \"date\": [datetime.now() for _ in range(1000)],\n",
-    "                   \"is_student\": [random.choice([True, False]) for _ in range(1000)]})\n",
-    "\n",
-    "column_memory_usage(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-21 22:22:04 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_hf_card3\u001b[0m\n"
+      "\u001b[37m2025-02-21 23:26:36 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_hf_card3\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e432834d8b048dca8f9e2ac567f1537",
+       "model_id": "a042d1e351be46bfb8df9e4e32d14988",
        "version_major": 2,
        "version_minor": 0
       },
@@ -170,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcf26e3dc3aa4ef1af23945782b01074",
+       "model_id": "52244813594a43b38c8237fc4769c846",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,12 +70,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3db8da81e3a4d9d80b518747583dc09",
+       "model_id": "2a1898acb30e4b58bdc5167bf5bf4d36",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "README.md:   0%|          | 0.00/444 [00:00<?, ?B/s]"
+       "README.md:   0%|          | 0.00/2.34k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2fcc90b2a3054505b6106ba868bd22c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/2.34k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -199,11 +99,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-21 22:22:07 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_hf_card3\" in 2.76s\u001b[0m\n"
+      "\u001b[37m2025-02-21 23:26:44 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_hf_card3\" in 8.03s\u001b[0m\n"
      ]
     }
    ],
    "source": [
+    "df = pd.DataFrame({\"name\": [f\"Name_{i}\" for i in range(1000)],\n",
+    "                   \"age\": [random.randint(18, 80) for _ in range(1000)],\n",
+    "                   \"height\": [random.randint(150, 200) for _ in range(1000)],\n",
+    "                   \"weight\": [random.randint(50, 150) for _ in range(1000)],\n",
+    "                   \"date\": [datetime.now() for _ in range(1000)],\n",
+    "                   \"is_student\": [random.choice([True, False]) for _ in range(1000)]})\n",
+    "\n",
     "ub.saves(df, \"hf://datatmp/test_hf_card3\")"
    ]
   }
