fix: hf backends loading | broken: s3 loading

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -817,6 +817,59 @@
     "\n",
     "_parse_hf_uri(\"hf://incantor/aesthetic_eagle_5category_iter99\") # incantor/aesthetic_eagle_5category_iter99, \"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logger test:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n",
+      "some normal print\n",
+      "\u001b[37m2025-02-22 17:38:12 [INFO] some_class.some_func: Hello from some_func\u001b[0m\n",
+      "\u001b[37m2025-02-22 17:38:12 [INFO] some_class.some_func: ✅ Hello from some_func\u001b[0m\n",
+      "\u001b[33m2025-02-22 17:38:12 [WARNING] some_class.some_func: ⚠️ Hello from some_func /ipykernel_406309/3891427853.py:17\u001b[0m\n",
+      "\u001b[31m2025-02-22 17:38:12 [ERROR] some_class.some_func: ❌ Hello from some_func /ipykernel_406309/3891427853.py:19\u001b[0m\n",
+      "\u001b[1;31m2025-02-22 17:38:12 [CRITICAL] some_class.some_func: 🔥 Hello from some_func /ipykernel_406309/3891427853.py:21\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from unibox.utils.logger import UniLogger\n",
+    "\n",
+    "l1 = UniLogger(use_color=True)\n",
+    "\n",
+    "\n",
+    "class some_class():\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def some_func(self):\n",
+    "        print(\"some normal print\")\n",
+    "\n",
+    "        l1.info(\"Hello from some_func\")\n",
+    "\n",
+    "        l1.notice(\"Hello from some_func\")\n",
+    "\n",
+    "        l1.warning(\"Hello from some_func\")\n",
+    "        \n",
+    "        l1.error(\"Hello from some_func\")\n",
+    "\n",
+    "        l1.critical(\"Hello from some_func\")\n",
+    "\n",
+    "cls = some_class()\n",
+    "cls.some_func()"
+   ]
   }
  ],
  "metadata": {
