--- a/notebooks/test_tmp.ipynb
+++ b/notebooks/test_tmp.ipynb
@@ -2,6 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-22 18:18:15 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e51fb7c763f4f9c896dbe345ab13504",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/1000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import unibox as ub\n",
+    "\n",
+    "\n",
+    "df = ub.loads(\"hf://datatmp/test_hf_card3\")\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -10,33 +46,106 @@
      "output_type": "stream",
      "text": [
       "Using global temporary directory: /tmp/unibox_temp\n",
-      "\u001b[37m2025-02-22 17:49:02 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+      "\u001b[37m2025-02-22 18:17:54 [INFO] loads: Loading from s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\u001b[0m\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "Logger.error() missing 1 required positional argument: 'msg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m/lv0/yada/unibox/src/unibox/loaders/hf_dataset_loader.py:65\u001b[0m, in \u001b[0;36mHFDatasetLoader.load\u001b[0;34m(self, local_path, loader_config)\u001b[0m\n\u001b[1;32m     64\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m load_dataset(dataset_id, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m---> 65\u001b[0m     \u001b[43mlogger\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdebug\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSuccessfully loaded dataset: \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdataset_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[0;31mTypeError\u001b[0m: Logger.debug() missing 1 required positional argument: 'msg'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01munibox\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mub\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mub\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhf://datatmp/test_hf_card3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m df\n",
-      "File \u001b[0;32m/lv0/yada/unibox/src/unibox/unibox.py:76\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(uri, file, debug_print, **kwargs)\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m local_path\n\u001b[1;32m     75\u001b[0m \u001b[38;5;66;03m# Use the loader router to handle both dataset and file loading\u001b[39;00m\n\u001b[0;32m---> 76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43muri\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloader_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/lv0/yada/unibox/src/unibox/loaders/loader_router.py:138\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(path, loader_config)\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[38;5;66;03m# Don't convert URIs to Path objects as it normalizes slashes\u001b[39;00m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m://\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m path_str:\n\u001b[0;32m--> 138\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mloader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_str\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloader_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloader_config\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    140\u001b[0m \u001b[38;5;66;03m# For local files, use Path\u001b[39;00m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m loader\u001b[38;5;241m.\u001b[39mload(Path(path_str), loader_config\u001b[38;5;241m=\u001b[39mloader_config \u001b[38;5;129;01mor\u001b[39;00m {})\n",
-      "File \u001b[0;32m/lv0/yada/unibox/src/unibox/loaders/hf_dataset_loader.py:67\u001b[0m, in \u001b[0;36mHFDatasetLoader.load\u001b[0;34m(self, local_path, loader_config)\u001b[0m\n\u001b[1;32m     65\u001b[0m     logger\u001b[38;5;241m.\u001b[39mdebug(message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSuccessfully loaded dataset: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 67\u001b[0m     \u001b[43mlogger\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFailed to load dataset \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdataset_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;66;03m# Convert to pandas if requested\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Logger.error() missing 1 required positional argument: 'msg'"
-     ]
+     "data": {
+      "text/plain": [
+       "['anime',\n",
+       " 'anime illustration',\n",
+       " 'an anime style image',\n",
+       " 'a photo',\n",
+       " 'a realistic photo',\n",
+       " 'a cosplay photo',\n",
+       " 'a photo of a person in cosplay costumes',\n",
+       " 'a photo of a person doing cosplay',\n",
+       " 'a drawing',\n",
+       " 'a painting',\n",
+       " 'logo design',\n",
+       " 'font design',\n",
+       " '2d design',\n",
+       " 'a 3d render',\n",
+       " 'a character design sheet',\n",
+       " 'a QR code',\n",
+       " 'drawing sketch',\n",
+       " 'painting sketch',\n",
+       " 'a realistic drawing',\n",
+       " 'a realistic photo of some food',\n",
+       " 'a photo of the table with food',\n",
+       " 'food photo',\n",
+       " 'an abstract painting',\n",
+       " 'artificial illustration',\n",
+       " 'realistic photography',\n",
+       " 'a photo of a painting',\n",
+       " 'sketch image',\n",
+       " 'doodle',\n",
+       " 'album cover',\n",
+       " 'meme',\n",
+       " 'comic page',\n",
+       " 'manga page',\n",
+       " 'screenshot',\n",
+       " 'gacha game',\n",
+       " 'mobile game screenshot',\n",
+       " 'a document',\n",
+       " 'a document page',\n",
+       " 'text',\n",
+       " 'book',\n",
+       " 'a diagram',\n",
+       " 'solid color',\n",
+       " 'color gradient',\n",
+       " 'simplistic image',\n",
+       " 'an professional image that follows photography composition',\n",
+       " 'an image with imbalanced visual weight',\n",
+       " 'an image with all focal subjects concentrated on one side of the frame',\n",
+       " 'an image with primary subject obscured',\n",
+       " 'an image with distracting unimportant objects',\n",
+       " 'an image with balanced exposure that enhances the image',\n",
+       " 'an image with dynamic lighting',\n",
+       " 'an image with lighting that originates from an angle',\n",
+       " 'an image with artificial lighting',\n",
+       " 'an image with lackluster lighting',\n",
+       " 'an excessively dim image',\n",
+       " 'an overexposed image',\n",
+       " 'an image with strong color and contrast',\n",
+       " 'an monochromatic image',\n",
+       " 'an image with a single dominant color',\n",
+       " 'a realistic photo of some food',\n",
+       " 'food photo',\n",
+       " 'a photo of the table with food',\n",
+       " 'a QR code',\n",
+       " 'a 3d render',\n",
+       " 'logo design',\n",
+       " 'a photo of a person in cosplay costumes',\n",
+       " 'a photo of a person doing cosplay',\n",
+       " 'a cosplay photo',\n",
+       " 'a photo of a book',\n",
+       " 'a blank page with no recognizable main subject',\n",
+       " 'a screenshot taken from a drawing software',\n",
+       " 'a sketch with no recognizable main subject',\n",
+       " 'a sketch that is not of anime subject',\n",
+       " 'a photo of the real world taken from a perspective with printed anime goods in the shot',\n",
+       " 'a photo taken from a perspective with printed anime goods in the shot',\n",
+       " 'a photo taken from a perspective with some anime goods in the shot',\n",
+       " 'an anime advertisement with text on it',\n",
+       " 'a poster with text with anime figures on it',\n",
+       " 'a screenshot from gacha game with ui on it',\n",
+       " 'a gacha game screenshot',\n",
+       " 'a photo of a drawing on a table with some pens nearby',\n",
+       " 'a photo of a drawing and its surrounding',\n",
+       " 'a photo of anime related goods',\n",
+       " 'a photo of a booth of anime goods']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import unibox as ub\n",
     "\n",
-    "\n",
-    "df = ub.loads(\"hf://datatmp/test_hf_card3\")\n",
+    "df = ub.loads(\"s3://dataset-ingested/temp/unibox_debug/clip_prompts_list_full_v2.txt\")\n",
     "\n",
     "df"
    ]
