refactor: let loader handle huggingface loads

--- a/notebooks/test_huggingface.ipynb
+++ b/notebooks/test_huggingface.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 19:10:09 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
+      "Using global temporary directory: /tmp/unibox_temp\n",
+      "\u001b[37m2025-02-22 19:59:26 [INFO] loads: Loading from hf://datatmp/test_hf_card3\u001b[0m\n"
      ]
     },
     {
@@ -163,7 +164,7 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,225 @@
     "\n",
     "# should load dataset as huggingface dataset, then convert to pandas\n",
     "df = ub.loads(\"hf://datatmp/test_hf_card3\").to_pandas()\n",
+    "assert df is not None\n",
+    "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-22 19:59:32 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b5da0edbaca49c2acadc451461a81f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42fc9fb2f2c14ef286bf93c0eb523ece",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69be4ff5170a4e8f92a949ded0d17fcc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/2.33k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# save the pandas dataframe, make sure that dataset card is properly updated\n",
+    "ub.saves(df, \"hf://datatmp/test_hf_card3_pandas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>date</th>\n",
+       "      <th>is_student</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Name_0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>168</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2025-02-21 23:42:14.771897</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Name_1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>157</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Name_2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>150</td>\n",
+       "      <td>123</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name  age  height  weight                       date  is_student\n",
+       "0  Name_0   55     168      52 2025-02-21 23:42:14.771897        True\n",
+       "1  Name_1   53     157      95 2025-02-21 23:42:14.771899        True\n",
+       "2  Name_2   79     150     123 2025-02-21 23:42:14.771899       False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-22 19:42:28 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ef0861cc5d3424a9ac55e86dd840853",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "254a2afaa4c1411e9a14920e6ca4687d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5597445823144bc8aa1da9e47e6c8d58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/2.40k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a851a1f969f743e69a46d49240c4c488",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/2.50k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# save to a split\n",
+    "ub.saves(df.iloc[:3], \"hf://datatmp/test_hf_card3_pandas\", split=\"first_3\")"
    ]
   },
   {
@@ -186,12 +405,169 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-22 19:10:58 [INFO] saves: Saving to hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
+      "\u001b[37m2025-02-22 19:59:21 [INFO] loads: Loading from hf://datatmp/test_hf_card3_pandas\u001b[0m\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>date</th>\n",
+       "      <th>is_student</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Name_0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>168</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2025-02-21 23:42:14.771897</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Name_1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>157</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Name_2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>150</td>\n",
+       "      <td>123</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Name_3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>193</td>\n",
+       "      <td>137</td>\n",
+       "      <td>2025-02-21 23:42:14.771899</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Name_4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>169</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2025-02-21 23:42:14.771900</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>Name_995</td>\n",
+       "      <td>55</td>\n",
+       "      <td>183</td>\n",
+       "      <td>112</td>\n",
+       "      <td>2025-02-21 23:42:14.772106</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>Name_996</td>\n",
+       "      <td>62</td>\n",
+       "      <td>164</td>\n",
+       "      <td>116</td>\n",
+       "      <td>2025-02-21 23:42:14.772106</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>Name_997</td>\n",
+       "      <td>22</td>\n",
+       "      <td>200</td>\n",
+       "      <td>120</td>\n",
+       "      <td>2025-02-21 23:42:14.772106</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>Name_998</td>\n",
+       "      <td>31</td>\n",
+       "      <td>182</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2025-02-21 23:42:14.772107</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>Name_999</td>\n",
+       "      <td>73</td>\n",
+       "      <td>196</td>\n",
+       "      <td>97</td>\n",
+       "      <td>2025-02-21 23:42:14.772107</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name  age  height  weight                       date  is_student\n",
+       "0      Name_0   55     168      52 2025-02-21 23:42:14.771897        True\n",
+       "1      Name_1   53     157      95 2025-02-21 23:42:14.771899        True\n",
+       "2      Name_2   79     150     123 2025-02-21 23:42:14.771899       False\n",
+       "3      Name_3   50     193     137 2025-02-21 23:42:14.771899        True\n",
+       "4      Name_4   30     169     134 2025-02-21 23:42:14.771900        True\n",
+       "..        ...  ...     ...     ...                        ...         ...\n",
+       "995  Name_995   55     183     112 2025-02-21 23:42:14.772106        True\n",
+       "996  Name_996   62     164     116 2025-02-21 23:42:14.772106        True\n",
+       "997  Name_997   22     200     120 2025-02-21 23:42:14.772106       False\n",
+       "998  Name_998   31     182      73 2025-02-21 23:42:14.772107       False\n",
+       "999  Name_999   73     196      97 2025-02-21 23:42:14.772107        True\n",
+       "\n",
+       "[1000 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ub.saves(df, \"hf://datatmp/test_hf_card3_pandas\")"
+    "# load a split\n",
+    "df3 = ub.loads(\"hf://datatmp/test_hf_card3_pandas\", split=\"first_3\").to_pandas()\n",
+    "df3"
    ]
   },
   {
